# molar

./: README.md
code_base/: README.md
code_base/include/core/: Angle.h  CompressedFrame.h  DescriptorCreator.h  Dynamics.h  ExtendedKalmanFilter.h  FilteredDynamics.h  GOData.h  GenericObject.h  IPAlgorithm.h  KeypointDescriptor.h  Options.h  RectangleRegion.h  SceneHandler.h  VideoBuffer.h  average.h  frame.h  objecthandler.h  sceneobject.h
code_base/include/dynamic_modules/: DirectedRodEMA.h  FreeKalman.h  FreeMovingAverage.h  NonHoloEMA.h  NonHoloEMA3D.h  NonHoloEMA_Orth.h  NonHoloKalman2D.h  NonHoloKalman2D_Orth.h  NonHoloKalman3D.h  SimpleFreeMovement.h  StaticDynamics.h
code_base/include/filters/: ColorRangeExpansion.h  ContrastBrightnessAdjustment.h
code_base/src/core/: Angle.cpp  CompressedFrame.cpp  DescriptorCreator.cpp  Dynamics.cpp  ExtendedKalmanFilter.cpp  FilteredDynamics.cpp  GOData.cpp  GenericObject.cpp  IPAlgorithm.cpp  KeypointDescriptor.cpp  Options.cpp  RectangleRegion.cpp  SceneHandler.cpp  VideoBuffer.cpp  frame.cpp  objecthandler.cpp  sceneobject.cpp
code_base/src/dynamic_modules/: DirectedRodEMA.cpp  FreeKalman.cpp  FreeMovingAverage.cpp  NonHoloEMA.cpp  NonHoloEMA3D.cpp  NonHoloEMA_Orth.cpp  NonHoloKalman2D.cpp  NonHoloKalman2D_Orth.cpp  NonHoloKalman3D.cpp  SimpleFreeMovement.cpp  StaticDynamics.cpp
code_base/src/filters/: ColorRangeExpansion.cpp  ContrastBrightnessAdjustment.cpp
code_base/stis/: .directory  README.md
code_base/stis/include/: genericmultilevelmap.hpp  generictype.hpp
code_base/stis/src/: generictype.cpp
code_base/stis/ticpp/: README.md
examples/: README.md
examples/gui/: README.md  twoHelixTypes_example.swsc
examples/headless/: CMakeLists.txt  README.md  main.cpp
examples/headless/generic classes/classifiers/inf/: cd1420167304.xml
examples/headless/generic classes/descriptions/inf/: ThinHelix_KF.xml
examples/headless/generic classes/features/sets/: fd1411355531.xml  fd1411355611.xml
examples/video_files/: twoHelixTypes_detected.avi  twoHelixTypes_original.avi
gui/: .gitignore  README.md  molar.pri  molar.pro
gui/include/: Runner.h  cvmatdisplay.h
gui/rsc/: resource.qrc
gui/rsc/img/: README.md
gui/rsc/qml/: AlgorithmChooser.qml  AlgorithmListModel.qml  AlgorithmSetting.qml  ClassificationContent.qml  ModarButton.qml  ModarSwitchButton.qml  MolarSettings.qml  NewFeatureSet.qml  NewObjectType.qml  NewStreamWindow.qml  SceneControlContent.qml  TypeChooser.qml  WhiteButton.qml  (+1 more)
gui/src/: Runner.cpp  cvmatdisplay.cpp  main.cpp  qtinterface.cpp
run/: README.md
(+10 files in other folders)
